--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Document</title>
+        <title>Royal style-натяжні стелі.</title>
     </head>
     <body>
         <header>
             <div>
                 <span>
-                    <a href="index.html">Royal style</a>
+                    <a href="index.html"><h1>Royal style</h1></a>
                 </span>
             </div>
             <nav>
@@ -35,75 +35,75 @@
         </header>
         <main>
             <section id="aboutus">
-                <p>Натяжні стелі у Львові 068-49-43-190 068-45-56-765</p>
-                <img src="фон.jpg" alt="фон">
-                <h1>Чому вибирають нас?</h1>
+                <p>Натяжні стелі у Львові</p> <p>068-49-43-190 068-45-56-765</p>
+                <h2>Чому вибирають нас?</h2>
                 <p>Ми завжди прагнемо бути кращими і ближчими до клієнтів.
              За роки ми заробили гарну позитивну репутацію, але це нас не зупинило з кожним днем ми покращуємо 
              якість наших послуг! Нижче тільки деякі причини чому обирають нас:</p>
-                <img src="like-site.png" alt="like">
+                <img src="like-site.png" alt="зображений лайк великий палець направлений в вгору">
                 <p>Якість і надійність </p>
                 <p>Вся наша техніка і матеріали проходять своєчасний
               технічний огляд і необхідне обслуговування.</p>
-                <img src="cash-site.png" alt="cash">
+                <img src="cash-site.png" alt="зображення долара">
                 <p>Оптимальна вартість</p>
                 <p>Найкращі ціни на всі види стель тільки у нашій компанії!</p>
-                <img src="procent-site.png" alt="procent">
+                <img src="procent-site.png" alt="зображення процента">
                 <p>Знижки!</p>
                 <p>Постійним клієнтам на всі наші стелі надається
               гнучка система знижок!</p>
-                <img src="time-site.png" alt="time">
+                <img src="time-site.png" alt="зображення годиника">
                 <p>Оперативне обслуговування</p>
                 <p>Ми приїдемо до Вас на заміри на наступний день після замовлення!</p>
             </section>
             <section id="advantages">
-                <h3>Переваги</h3>
-                <img src="вартість.png" alt="вартість">
-                <h1>Вартість</h1>
+                <h1>Переваги</h1>
+                <img src="вартість.png" alt="вартість видеться обчислення на калькуляторі">
+                <h2>Вартість</h2>
                 <p>У порівнянні з іншими стельовими 
           покриттями, такими як штукатурка, гіпсокартонні конструкції, у натяжних стель найнижча ціна.</p>
-                <img src="довговічність.png" alt="довговічність">
-                <h1>Довговічність</h1>
+                <img src="довговічність.png" alt="довговічність зображений годиник">
+                <h2>Довговічність</h2>
                 <p>Стелі не вигоряють, не провисають, 
           не тріскаються. Їх не потрібно підфарбовувати або подшпаклёвивать.
            Термін експлуатації - більше 20 років.</p>
-                <img src="догляд.png" alt="догляд">
-                <h1>Не вимагає догляду</h1>
+                <img src="догляд.png" alt="догляд чоловік протирає натяжні стелі">
+                <h2>Не вимагає догляду</h2>
                 <p>Без особливої потреби натяжні стелі не потребують 
           догляду. Плівка не утримує на собі частинки пилу, так як вона абсолютно гладка.</p>
-                <img src="корольова-гама.jpg" alt="кольорова-гама">
-                <h1>Кольорова гама</h1>
+                <img src="корольова-гама.jpg" alt="кольорова-гама зображений різновидність кольорів">
+                <h2>Кольорова гама</h2>
                 <p>Завдяки величезній кількості колірних
            відтінків - більше 180, кожен зможе підібрати колір стелі на свій смак.</p>
-                <img src="міцність.png" alt="міцність">
-                <h1>Міцність</h1>
+                <img src="міцність.png" alt="міцність натяжний потолок утримує велику кількість води">
+                <h2>Міцність</h2>
                 <p>Можуть витримати до 100 літрів води на метр квадратний.</p>
-                <img src="час-установки.png" alt="час-установки">
-                <h1>Час установкі</h1>
+                <img src="час-установки.png" alt="час-установки чоловікі втановлюють натяжну стелю">
+                <h2>Час установкі</h2>
                 <p>Швидкість монтажу натяжної стелі в рази 
           швидше, ніж стелі з інших матеріалів.</p>
             </section>
             <section id="price">
-                <h1>Ціни на натяжні стелі у Львові</h1>
-                <img src="глянцеві.jpg" alt="глянцеві">
+                <h2>Ціни на натяжні стелі у Львові</h2>
+                <img src="глянцеві.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
                 <p>Глянцеві стелі від 200 грн./м.кв</p>
-                <img src="матові.jpg" alt="матові">
+                <img src="матові.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
                 <p>Матові від 200 грн./м.кв</p>
-                <img src="двохяросні.jpg" alt="двохяросні">
+                <img src="двохяросні.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
                 <p>Двохрівневі від 500 грн./м.кв</p>
-                <img src="парящі.jpg" alt="парящі">
+                <img src="парящі.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
                 <p>Парящі від 500 грн./м.кв</p>
             </section>
             <section id="gallery">
-                <h3>Галерея наших робіт</h3>
-            <img src="gallery-1.jpg" alt="1">
-            <img src="gallery-2.jpg" alt="2">
-            <img src="gallery-3.jpg" alt="3">
-            <img src="gallery-4.jpg" alt="4">
-            </section></main>
+                <h1>Галерея наших робіт</h1>
+            <img src="gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
+            <img src="gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
+            <img src="gallery-3.jpg" alt="простора кімната з натяжними потолками">
+            <img src="gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
+            </section>
+        </main>
 <footer>
     <div id="contact">
-        <h3>Зв'язатися з нами</h3>
+        <h1>Зв'язатися з нами</h1>
         <form>
             <input type="text" placeholder="Прізвище і ім'я">
             <br>
@@ -113,7 +113,7 @@
             <br>
             <input type="submit" value="Надіслати">
         </form>
-        <img src="звязок.jpg" alt="звязок">
+        <img src="звязок.jpg" alt="дівчина яка тримає бланк і ручку">
         <p>Або ж за номером вказаний вище</p>
     </div>
 </footer>
