Alt and anyther

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <img src="cash-site.png" alt="зображення долара">
                 <p>Оптимальна вартість</p>
                 <p>Найкращі ціни на всі види стель тільки у нашій компанії!</p>
-                <img src="procent-site.png" alt="зображення процента">
+                <img src="procent.jpg" alt="зображення процента">
                 <p>Знижки!</p>
                 <p>Постійним клієнтам на всі наші стелі надається
               гнучка система знижок!</p>
@@ -57,40 +57,40 @@
             </section>
             <section id="advantages">
                 <h1>Переваги</h1>
-                <img src="вартість.png" alt="вартість видеться обчислення на калькуляторі">
+                <img src="cost.png" alt="вартість видеться обчислення на калькуляторі">
                 <h2>Вартість</h2>
                 <p>У порівнянні з іншими стельовими 
           покриттями, такими як штукатурка, гіпсокартонні конструкції, у натяжних стель найнижча ціна.</p>
-                <img src="довговічність.png" alt="довговічність зображений годиник">
+                <img src="durability.png" alt="довговічність зображений годиник">
                 <h2>Довговічність</h2>
                 <p>Стелі не вигоряють, не провисають, 
           не тріскаються. Їх не потрібно підфарбовувати або подшпаклёвивать.
            Термін експлуатації - більше 20 років.</p>
-                <img src="догляд.png" alt="догляд чоловік протирає натяжні стелі">
+                <img src="care.png" alt="догляд чоловік протирає натяжні стелі">
                 <h2>Не вимагає догляду</h2>
                 <p>Без особливої потреби натяжні стелі не потребують 
           догляду. Плівка не утримує на собі частинки пилу, так як вона абсолютно гладка.</p>
-                <img src="корольова-гама.jpg" alt="кольорова-гама зображений різновидність кольорів">
+                <img src="queen-scale.jpg" alt="кольорова-гама зображений різновидність кольорів">
                 <h2>Кольорова гама</h2>
                 <p>Завдяки величезній кількості колірних
            відтінків - більше 180, кожен зможе підібрати колір стелі на свій смак.</p>
-                <img src="міцність.png" alt="міцність натяжний потолок утримує велику кількість води">
+                <img src="strength.png" alt="міцність натяжний потолок утримує велику кількість води">
                 <h2>Міцність</h2>
                 <p>Можуть витримати до 100 літрів води на метр квадратний.</p>
-                <img src="час-установки.png" alt="час-установки чоловікі втановлюють натяжну стелю">
+                <img src="installation-time.png" alt="час-установки чоловікі втановлюють натяжну стелю">
                 <h2>Час установкі</h2>
                 <p>Швидкість монтажу натяжної стелі в рази 
           швидше, ніж стелі з інших матеріалів.</p>
             </section>
             <section id="price">
                 <h2>Ціни на натяжні стелі у Львові</h2>
-                <img src="глянцеві.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
+                <img src="glossy.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
                 <p>Глянцеві стелі від 200 грн./м.кв</p>
-                <img src="матові.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
+                <img src="matt.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
                 <p>Матові від 200 грн./м.кв</p>
-                <img src="двохяросні.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
+                <img src="two-pointed.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
                 <p>Двохрівневі від 500 грн./м.кв</p>
-                <img src="парящі.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
+                <img src="soaring.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
                 <p>Парящі від 500 грн./м.кв</p>
             </section>
             <section id="gallery">
@@ -113,7 +113,7 @@
             <br>
             <input type="submit" value="Надіслати">
         </form>
-        <img src="звязок.jpg" alt="дівчина яка тримає бланк і ручку">
+        <img src="communication.jpg" alt="дівчина яка тримає бланк і ручку">
         <p>Або ж за номером вказаний вище</p>
     </div>
 </footer>
