header,nav,section not all

--- a/index.html
+++ b/index.html
@@ -4,38 +4,38 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Royal style-натяжні стелі.</title>
+        <title>Royal style - натяжні стелі.</title>
+        <link rel="stylesheet" href="css/index.css">
     </head>
     <body>
         <header>
-            <div>
-                <span>
-                    <a href="index.html"><h1>Royal style</h1></a>
-                </span>
-            </div>
             <nav>
-                <ul>
-                    <li>
-                        <a href="#aboutus">Про нас</a>
-                    </li>
-                    <li>
-                        <a href="#advantages">Переваги</a>
-                    </li>
-                    <li>
-                        <a href="#price">Ціни</a>
-                    </li>
-                    <li>
-                        <a href="#gallery">Галерея</a>
-                    </li>
-                    <li>
-                        <a href="#contact">Зв'язатися з нами</a>
-                    </li>
+            <div class="logo">
+                    <a href="index.html">Royal style</a>
+            </div>
+                <ul class="menu">
+                    <li><a href="#aboutus">Про нас</a></li>
+                    <li><a href="#advantages">Переваги</a></li>
+                    <li><a href="#price">Ціни</a></li>
+                    <li><a href="#gallery">Галерея</a></li>
+                    <li><a href="#contact">Зв'язатися з нами</a></li>
                 </ul>
             </nav>
+            <section>
+                <p class="text-on-fon"><h2><span>Натяжні </span>стелі у Львові</p></h2>
+                <ul class="telefon">
+                 <li>
+                 <a href="tel:068-494-31-92">
+                 <span>068</span>-494-31-92</a>
+                 <li> 
+                 <a href="tel:068-455-67-65">
+                 <span>068</span>-455-67-65</a>
+                 </li>
+                </ul>
+            </section>
         </header>
         <main>
             <section id="aboutus">
-                <p>Натяжні стелі у Львові</p> <p>068-49-43-190 068-45-56-765</p>
                 <h2>Чому вибирають нас?</h2>
                 <p>Ми завжди прагнемо бути кращими і ближчими до клієнтів.
              За роки ми заробили гарну позитивну репутацію, але це нас не зупинило з кожним днем ми покращуємо 
