--- a/index.html
+++ b/index.html
@@ -40,65 +40,65 @@
                 <p>Ми завжди прагнемо бути кращими і ближчими до клієнтів.
              За роки ми заробили гарну позитивну репутацію, але це нас не зупинило з кожним днем ми покращуємо 
              якість наших послуг! Нижче тільки деякі причини чому обирають нас:</p>
-                <img src="like-site.png" alt="зображений лайк великий палець направлений в вгору">
+                <img src="img/like-site.png" alt="зображений лайк великий палець направлений в вгору">
                 <p>Якість і надійність </p>
                 <p>Вся наша техніка і матеріали проходять своєчасний
               технічний огляд і необхідне обслуговування.</p>
-                <img src="cash-site.png" alt="зображення долара">
+                <img src="img/cash-site.png" alt="зображення долара">
                 <p>Оптимальна вартість</p>
                 <p>Найкращі ціни на всі види стель тільки у нашій компанії!</p>
-                <img src="procent.jpg" alt="зображення процента">
+                <img src="img/procent.jpg" alt="зображення процента">
                 <p>Знижки!</p>
                 <p>Постійним клієнтам на всі наші стелі надається
               гнучка система знижок!</p>
-                <img src="time-site.png" alt="зображення годиника">
+                <img src="img/time-site.png" alt="зображення годиника">
                 <p>Оперативне обслуговування</p>
                 <p>Ми приїдемо до Вас на заміри на наступний день після замовлення!</p>
             </section>
             <section id="advantages">
                 <h1>Переваги</h1>
-                <img src="cost.png" alt="вартість видеться обчислення на калькуляторі">
+                <img src="img/cost.png" alt="вартість видеться обчислення на калькуляторі">
                 <h2>Вартість</h2>
                 <p>У порівнянні з іншими стельовими 
           покриттями, такими як штукатурка, гіпсокартонні конструкції, у натяжних стель найнижча ціна.</p>
-                <img src="durability.png" alt="довговічність зображений годиник">
+                <img src="img/durability.png" alt="довговічність зображений годиник">
                 <h2>Довговічність</h2>
                 <p>Стелі не вигоряють, не провисають, 
           не тріскаються. Їх не потрібно підфарбовувати або подшпаклёвивать.
            Термін експлуатації - більше 20 років.</p>
-                <img src="care.png" alt="догляд чоловік протирає натяжні стелі">
+                <img src="img/care.png" alt="догляд чоловік протирає натяжні стелі">
                 <h2>Не вимагає догляду</h2>
                 <p>Без особливої потреби натяжні стелі не потребують 
           догляду. Плівка не утримує на собі частинки пилу, так як вона абсолютно гладка.</p>
-                <img src="queen-scale.jpg" alt="кольорова-гама зображений різновидність кольорів">
+                <img src="img/queen-scale.jpg" alt="кольорова-гама зображений різновидність кольорів">
                 <h2>Кольорова гама</h2>
                 <p>Завдяки величезній кількості колірних
            відтінків - більше 180, кожен зможе підібрати колір стелі на свій смак.</p>
-                <img src="strength.png" alt="міцність натяжний потолок утримує велику кількість води">
+                <img src="img/strength.png" alt="міцність натяжний потолок утримує велику кількість води">
                 <h2>Міцність</h2>
                 <p>Можуть витримати до 100 літрів води на метр квадратний.</p>
-                <img src="installation-time.png" alt="час-установки чоловікі втановлюють натяжну стелю">
+                <img src="img/installation-time.png" alt="час-установки чоловікі втановлюють натяжну стелю">
                 <h2>Час установкі</h2>
                 <p>Швидкість монтажу натяжної стелі в рази 
           швидше, ніж стелі з інших матеріалів.</p>
             </section>
             <section id="price">
                 <h2>Ціни на натяжні стелі у Львові</h2>
-                <img src="glossy.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
+                <img src="img/glossy.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
                 <p>Глянцеві стелі від 200 грн./м.кв</p>
-                <img src="matt.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
+                <img src="img/matt.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
                 <p>Матові від 200 грн./м.кв</p>
-                <img src="two-pointed.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
+                <img src="img/two-pointed.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
                 <p>Двохрівневі від 500 грн./м.кв</p>
-                <img src="soaring.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
+                <img src="img/soaring.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
                 <p>Парящі від 500 грн./м.кв</p>
             </section>
             <section id="gallery">
                 <h1>Галерея наших робіт</h1>
-            <img src="gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
-            <img src="gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
-            <img src="gallery-3.jpg" alt="простора кімната з натяжними потолками">
-            <img src="gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
+            <img src="img/gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
+            <img src="img/gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
+            <img src="img/gallery-3.jpg" alt="простора кімната з натяжними потолками">
+            <img src="img/gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
             </section>
         </main>
 <footer>
@@ -113,7 +113,7 @@
             <br>
             <input type="submit" value="Надіслати">
         </form>
-        <img src="communication.jpg" alt="дівчина яка тримає бланк і ручку">
+        <img src="img/communication.jpg" alt="дівчина яка тримає бланк і ручку">
         <p>Або ж за номером вказаний вище</p>
     </div>
 </footer>
