end logo not all burger

--- a/index.html
+++ b/index.html
@@ -9,17 +9,18 @@
     </head>
     <body>
         <header>
-            <nav>
             <div class="logo">
-                    <a href="index.html">Royal style</a>
+                    <a href="index.html"><p class="graficlogo">Royal style</p></a>
             </div>
-                <ul class="menu">
-                    <li><a href="#aboutus">Про нас</a></li>
-                    <li><a href="#advantages">Переваги</a></li>
-                    <li><a href="#price">Ціни</a></li>
-                    <li><a href="#gallery">Галерея</a></li>
-                    <li><a href="#contact">Зв'язатися з нами</a></li>
-                </ul>
+            <nav>
+            <div class="topnav" id="myTopnav">
+                    <a href="#aboutus">Про нас</a>
+                    <a href="#advantages">Переваги</a>
+                    <a href="#price">Ціни</a>
+                    <a href="#gallery">Галерея</a>
+                    <a href="#contact">Зв'язатися з нами</a>
+                    <a id="menu" href="#" class="icon">&#9776;</a>
+            </div>
             </nav>
             <section>
                 <p class="text-on-fon"><h2><span>Натяжні </span>стелі у Львові</p></h2>
