--- a/index.html
+++ b/index.html
@@ -5,33 +5,48 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Royal style - натяжні стелі.</title>
-        <link rel="stylesheet" href="css/index.css">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/index.css">    
     </head>
     <body>
         <header>
-            <div class="logo">
-                    <a href="index.html"><p class="graficlogo">Royal style</p></a>
+            <!--<div class="logo">
+                <a href="index.html"><p class="graficlogo">Royal style</p></a>
             </div>
             <nav>
             <div class="topnav" id="myTopnav">
-                    <a href="#aboutus">Про нас</a>
-                    <a href="#advantages">Переваги</a>
-                    <a href="#price">Ціни</a>
-                    <a href="#gallery">Галерея</a>
-                    <a href="#contact">Зв'язатися з нами</a>
-                    <a id="menu" href="#" class="icon">&#9776;</a>
+                <a href="#aboutus">Про нас</a>
+                <a href="#advantages">Переваги</a>
+                <a href="#price">Ціни</a>
+                <a href="#gallery">Галерея</a>
+                <a href="#contact">Зв'язатися з нами</a>
             </div>
+            </nav>-->
+            <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
+                <a class="navbar-brand" href="index.html">Royal style</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+            <a class="nav-item nav-link" href="#aboutus">Про нас<span class="sr-only">(current)</span></a>
+            <a class="nav-item nav-link" href="#advantages">Переваги</a>
+            <a class="nav-item nav-link" href="#price">Ціни</a>
+            <a class="nav-item nav-link" href="#gallery">Галерея</a>
+            <a class="nav-item nav-link" href="#contact">Зв'язатися з нами</a>
+                </div>
+                </div>
             </nav>
             <section>
                 <p class="text-on-fon"><h2><span>Натяжні </span>стелі у Львові</p></h2>
                 <ul class="telefon">
-                 <li>
-                 <a href="tel:068-494-31-92">
-                 <span>068</span>-494-31-92</a>
-                 <li> 
-                 <a href="tel:068-455-67-65">
-                 <span>068</span>-455-67-65</a>
-                 </li>
+                <li>
+                <a href="tel:068-494-31-92">
+                <span>068</span>-494-31-92</a>
+                <li> 
+                <a href="tel:068-455-67-65">
+                <span>068</span>-455-67-65</a>
+                </li>
                 </ul>
             </section>
         </header>
@@ -118,4 +133,8 @@
         <p>Або ж за номером вказаний вище</p>
     </div>
 </footer>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+</body>
 </html>
