--- a/index.html
+++ b/index.html
@@ -10,19 +10,7 @@
     </head>
     <body>
         <header>
-            <!--<div class="logo">
-                <a href="index.html"><p class="graficlogo">Royal style</p></a>
-            </div>
-            <nav>
-            <div class="topnav" id="myTopnav">
-                <a href="#aboutus">Про нас</a>
-                <a href="#advantages">Переваги</a>
-                <a href="#price">Ціни</a>
-                <a href="#gallery">Галерея</a>
-                <a href="#contact">Зв'язатися з нами</a>
-            </div>
-            </nav>-->
-            <nav class="navbar navbar-expand-lg navbar-dark  fixed-top">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <a class="navbar-brand" href="index.html">Royal style</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -38,8 +26,8 @@
                 </div>
             </nav>
             <section>
-                <p class="text-on-fon"><h2><span>Натяжні </span>стелі у Львові</p></h2>
-                <ul class="telefon">
+                <p><h1><span>Натяжні </span>стелі у Львові</p></h1>
+                <ul>
                 <li>
                 <a href="tel:068-494-31-92">
                 <span>068</span>-494-31-92</a>
@@ -50,76 +38,228 @@
                 </ul>
             </section>
         </header>
+
+
         <main>
-            <section id="aboutus">
-                <h2>Чому вибирають нас?</h2>
-                <p>Ми завжди прагнемо бути кращими і ближчими до клієнтів.
+            <div id="aboutus">
+                <h2 class="aboutus">Чому <span>вибирають</span> нас?</h2>
+                <p class="service">Ми завжди прагнемо бути кращими і ближчими до клієнтів.
              За роки ми заробили гарну позитивну репутацію, але це нас не зупинило з кожним днем ми покращуємо 
              якість наших послуг! Нижче тільки деякі причини чому обирають нас:</p>
-                <img src="img/like-site.png" alt="зображений лайк великий палець направлений в вгору">
-                <p>Якість і надійність </p>
-                <p>Вся наша техніка і матеріали проходять своєчасний
+            </div>
+
+            <div class="container">
+             <div class="fiature">
+              <div class="fiature__item">
+                <img class="fiature__icon" src="img/like-site.png" alt="зображений лайк великий палець направлений в вгору">
+                <h4 class="fiature__title">Якість і надійність </h4>
+                <p class="fiature__text">Вся наша техніка і матеріали проходять своєчасний
               технічний огляд і необхідне обслуговування.</p>
-                <img src="img/cash-site.png" alt="зображення долара">
-                <p>Оптимальна вартість</p>
-                <p>Найкращі ціни на всі види стель тільки у нашій компанії!</p>
-                <img src="img/procent.jpg" alt="зображення процента">
-                <p>Знижки!</p>
-                <p>Постійним клієнтам на всі наші стелі надається
+              </div>
+
+              <div class="fiature__item">
+                <img class="fiature__icon" src="img/procent.jpg" alt="зображення процента">
+                <h4 class="fiature__title">Знижки!</h4>
+                <p class="fiature__text">Постійним клієнтам на всі наші стелі надається
               гнучка система знижок!</p>
-                <img src="img/time-site.png" alt="зображення годиника">
-                <p>Оперативне обслуговування</p>
-                <p>Ми приїдемо до Вас на заміри на наступний день після замовлення!</p>
-            </section>
+              </div>
+
+              <div class="fiature__item">
+                <img class="fiature__icon" src="img/cash-site.png" alt="зображення долара">
+                <h4 class="fiature__title">Оптимальна вартість</h4>
+                <p class="fiature__text">Найкращі ціни на всі види стель тільки у нашій компанії!</p>
+              </div>
+
+              <div class="fiature__item">
+                <img class="fiature__icon" src="img/time-site.png" alt="зображення годиника">
+                <h4 class="fiature__title">Оперативне обслуговування</h4>
+                <p class="fiature__text">Ми приїдемо до Вас на заміри на наступний день після замовлення!</p>
+              </div>
+             </div>
+            </div>
+         
+
+
+
+
+
+
             <section id="advantages">
-                <h1>Переваги</h1>
-                <img src="img/cost.png" alt="вартість видеться обчислення на калькуляторі">
-                <h2>Вартість</h2>
-                <p>У порівнянні з іншими стельовими 
+                <h1 class="aboutus"><span>Переваги<span></h1>
+                <div class="row row-cols-1 row-cols-md-3">
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="img/cost.png" class="card-img-top" alt="вартість видеться обчислення на калькуляторі">
+                        <div class="card-body">
+                          <h5 class="card-title">Вартість</h5>
+                          <p class="card-text">У порівнянні з іншими стельовими 
           покриттями, такими як штукатурка, гіпсокартонні конструкції, у натяжних стель найнижча ціна.</p>
-                <img src="img/durability.png" alt="довговічність зображений годиник">
-                <h2>Довговічність</h2>
-                <p>Стелі не вигоряють, не провисають, 
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="img/durability.png" class="card-img-top" alt="довговічність зображений годиник">
+                        <div class="card-body">
+                          <h5 class="card-title">Довговічність</h5>
+                          <p class="card-text">Стелі не вигоряють, не провисають, 
           не тріскаються. Їх не потрібно підфарбовувати або подшпаклёвивать.
            Термін експлуатації - більше 20 років.</p>
-                <img src="img/care.png" alt="догляд чоловік протирає натяжні стелі">
-                <h2>Не вимагає догляду</h2>
-                <p>Без особливої потреби натяжні стелі не потребують 
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="img/care.png" class="card-img-top" alt="догляд чоловік протирає натяжні стелі">
+                        <div class="card-body">
+                          <h5 class="card-title">Не вимагає догляду</h5>
+                          <p class="card-text">Без особливої потреби натяжні стелі не потребують 
           догляду. Плівка не утримує на собі частинки пилу, так як вона абсолютно гладка.</p>
-                <img src="img/queen-scale.jpg" alt="кольорова-гама зображений різновидність кольорів">
-                <h2>Кольорова гама</h2>
-                <p>Завдяки величезній кількості колірних
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img class="imgqueen" src="img/queen-scale.jpg" class="card-img-top" alt="кольорова-гама зображений різновидність кольорів">
+                        <div class="card-body">
+                          <h5 class="card-title">Кольорова гама</h5>
+                          <p class="card-text">Завдяки величезній кількості колірних
            відтінків - більше 180, кожен зможе підібрати колір стелі на свій смак.</p>
-                <img src="img/strength.png" alt="міцність натяжний потолок утримує велику кількість води">
-                <h2>Міцність</h2>
-                <p>Можуть витримати до 100 літрів води на метр квадратний.</p>
-                <img src="img/installation-time.png" alt="час-установки чоловікі втановлюють натяжну стелю">
-                <h2>Час установкі</h2>
-                <p>Швидкість монтажу натяжної стелі в рази 
+                        </div>
+                      </div>
+                    </div>
+
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="img/strength.png" class="card-img-top" alt="міцність натяжний потолок утримує велику кількість води">
+                        <div class="card-body">
+                          <h5 class="card-title">Міцність</h5>
+                          <p class="card-text">Можуть витримати до 100 літрів води на метр квадратний.</p>
+                        </div>
+                      </div>
+                    </div>
+
+
+                    <div class="col mb-4">
+                      <div class="card h-100">
+                        <img src="img/installation-time.png" class="card-img-top" alt="час-установки чоловікі втановлюють натяжну стелю">
+                        <div class="card-body">
+                          <h5 class="card-title">Час установкі</h5>
+                          <p class="card-text">Швидкість монтажу натяжної стелі в рази 
           швидше, ніж стелі з інших матеріалів.</p>
+                        </div>
+                      </div>
+                    </div>
+                </div>
             </section>
+
+
+
             <section id="price">
-                <h2>Ціни на натяжні стелі у Львові</h2>
-                <img src="img/glossy.jpg" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
-                <p>Глянцеві стелі від 200 грн./м.кв</p>
-                <img src="img/matt.jpg" alt="зображеня кім7ната в білих тонах в якої матова натяжна стеля">
-                <p>Матові від 200 грн./м.кв</p>
-                <img src="img/two-pointed.jpg" alt="темна кімната в якій двохяросний натяжний потолок">
-                <p>Двохрівневі від 500 грн./м.кв</p>
-                <img src="img/soaring.jpg" alt="темна кімната з білими стінами та парящим натяжним потолком">
-                <p>Парящі від 500 грн./м.кв</p>
+            <h1 class="aboutus">Ціни на <span>натяжні стелі</span> у Львові</h1>
+            <div class="row row-cols-1 row-cols-md-2">
+                <div class="col mb-4">
+                  <div class="card">
+                    <img class="imgprice" src="img/glossy.jpg" class="card-img-top" alt="зображена кімната в білих кольорах в якої глянцева таняжна стеля">
+                    <div class="card-body">
+                      <h5 class="card-title"><span>Глянцеві стелі</span> 200 грн./м.кв</h5>
+                      <a href="#call" class="btn btn-primary btn-lg btn-block">Замовити</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col mb-4">
+                  <div class="card">
+                    <img class="imgprice" src="img/matt.jpg" class="card-img-top" alt="зображеня кімната в білих тонах в якої матова натяжна стеля">
+                    <div class="card-body">
+                      <h5 class="card-title"><span>Матові</span> від 200 грн./м.кв</h5>
+                      <a href="#call" class="btn btn-primary btn-lg btn-block">Замовити</a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col mb-4">
+                  <div class="card">
+                    <img class="imgprice" src="img/two-pointed.jpg" class="card-img-top" alt="темна кімната в якій двохяросний натяжний потолок">
+                    <div class="card-body">
+                      <h5 class="card-title"><span>Двохрівневі</span> від 500 грн./м.кв</h5>
+                      <a href="#call" class="btn btn-primary btn-lg btn-block">Замовити</a>
+                      </div>
+                  </div>
+                </div>
+                <div class="col mb-4">
+                  <div class="card">
+                    <img class="imgprice" src="img/soaring.jpg" class="card-img-top" alt="темна кімната з білими стінами та парящим натяжним потолком">
+                    <div class="card-body">
+                      <h5 class="card-title"><span>Парящі</span> від 500 грн./м.кв</h5>
+                      <a href="#call" class="btn btn-primary btn-lg btn-block">Замовити</a>
+                      </div>
+                  </div>
+                </div>
+                </div>
             </section>
-            <section id="gallery">
-                <h1>Галерея наших робіт</h1>
-            <img src="img/gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
-            <img src="img/gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
-            <img src="img/gallery-3.jpg" alt="простора кімната з натяжними потолками">
-            <img src="img/gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
+            <section id="gallery" class="gallery">
+            <div class="container">
+            <h1 class="aboutus">Галерея <span>робіт нашої</span> компанії</h1>
+            <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="img/gallery-1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/gallery-2.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/gallery-3.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="img/gallery-4.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+           <!--- <img data-fancybox="gallery" src="img/gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
+            <img data-fancybox="gallery" src="img/gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
+            <img data-fancybox="gallery" src="img/gallery-3.jpg" alt="простора кімната з натяжними потолками">
+            <img data-fancybox="gallery" src="img/gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
+            </div>-->
             </section>
         </main>
-<footer>
-    <div id="contact">
-        <h1>Зв'язатися з нами</h1>
+      <footer>
+            <div id="contact">
+                <h1 id="call" class="aboutus">Зв'язатися з нами</h1>
+                <form>
+          <div class="form-group">
+            <label for="exampleInputEmail1">Ваш Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+          </div>
+         <div class="row">
+    <div class="col">
+      <input type="text" class="form-control" placeholder="First name">
+    </div>
+    <div class="col">
+      <input type="text" class="form-control" placeholder="Last name">
+    </div>
+  </div>
+          </div>
+          <div class="form-group">
+            <label for="exampleFormControlTextarea1">Example textarea</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+                </form>
+          <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
         <form>
             <input type="text" placeholder="Прізвище і ім'я">
             <br>
