--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Royal style - натяжні стелі.</title>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://kit.fontawesome.com/7eb12f9245.js" crossorigin="anonymous"></script>
         <link rel="stylesheet" href="css/index.css">    
     </head>
     <body>
@@ -25,7 +26,7 @@
                 </div>
                 </div>
             </nav>
-            <section>
+            <section id="up">
                 <p><h1><span>Натяжні </span>стелі у Львові</p></h1>
                 <ul>
                 <li>
@@ -38,8 +39,6 @@
                 </ul>
             </section>
         </header>
-
-
         <main>
             <div id="aboutus">
                 <h2 class="aboutus">Чому <span>вибирають</span> нас?</h2>
@@ -77,13 +76,6 @@
               </div>
              </div>
             </div>
-         
-
-
-
-
-
-
             <section id="advantages">
                 <h1 class="aboutus"><span>Переваги<span></h1>
                 <div class="row row-cols-1 row-cols-md-3">
@@ -97,8 +89,6 @@
                         </div>
                       </div>
                     </div>
-
-
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="img/durability.png" class="card-img-top" alt="довговічність зображений годиник">
@@ -110,8 +100,6 @@
                         </div>
                       </div>
                     </div>
-
-
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="img/care.png" class="card-img-top" alt="догляд чоловік протирає натяжні стелі">
@@ -122,7 +110,6 @@
                         </div>
                       </div>
                     </div>
-
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img class="imgqueen" src="img/queen-scale.jpg" class="card-img-top" alt="кольорова-гама зображений різновидність кольорів">
@@ -133,7 +120,6 @@
                         </div>
                       </div>
                     </div>
-
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="img/strength.png" class="card-img-top" alt="міцність натяжний потолок утримує велику кількість води">
@@ -143,8 +129,6 @@
                         </div>
                       </div>
                     </div>
-
-
                     <div class="col mb-4">
                       <div class="card h-100">
                         <img src="img/installation-time.png" class="card-img-top" alt="час-установки чоловікі втановлюють натяжну стелю">
@@ -157,9 +141,6 @@
                     </div>
                 </div>
             </section>
-
-
-
             <section id="price">
             <h1 class="aboutus">Ціни на <span>натяжні стелі</span> у Львові</h1>
             <div class="row row-cols-1 row-cols-md-2">
@@ -228,53 +209,45 @@
     <span class="sr-only">Next</span>
   </a>
 </div>
-           <!--- <img data-fancybox="gallery" src="img/gallery-1.jpg" alt="кімната в білих тонах з натяжними потолками">
-            <img data-fancybox="gallery" src="img/gallery-2.jpg" alt="біла стеля з фіолетовим натяжним потолком">
-            <img data-fancybox="gallery" src="img/gallery-3.jpg" alt="простора кімната з натяжними потолками">
-            <img data-fancybox="gallery" src="img/gallery-4.jpg" alt="стеля повністю покрита натяжним потолком">
-            </div>-->
             </section>
         </main>
       <footer>
+      <h1 class="aboutus">Швидше <span>зроби красу в своєму</span> домі</h1>
+      <div class="clock-box">
+      </div>
+      <div>
+      <h1 class="aboutus">Дізнайтесь вашу ціну</h1>
+      <div class="wraper">
+                <div class="contact-form">                
+                  <div class="input-fields">
+               <input class="input" type="number" name="a1" placeholder="Довжина">
+             <div><input class="input" name="result1" placeholder="Площа"></div>
+             </div>
+                </div>
+      </div>
+      </div>
             <div id="contact">
                 <h1 id="call" class="aboutus">Зв'язатися з нами</h1>
-                <form>
-          <div class="form-group">
-            <label for="exampleInputEmail1">Ваш Email</label>
-            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-          </div>
-         <div class="row">
-    <div class="col">
-      <input type="text" class="form-control" placeholder="First name">
+                <div class="wraper">
+                <div class="contact-form">                
+                  <div class="input-fields">
+                   <input type="text" class="input" placeholder="Ім'я">
+                   <input type="text" class="input" placeholder="Прізвище">
+                   <input type="text" class="input" placeholder="Номер">
+                   </div>
+                   <div class="smg">
+                   <textarea placeholder="Коментар"></textarea>
+                   <div class="btn" >Відправити</div>
+                 </div>
+                </div>
+        <h1 class="aboutus">Або ж <span>за номером вказаний</span> вище</h1>
+        <a class="gotobtn" href="#up"><i class="fas fa-arrow-up"></i></a>
     </div>
-    <div class="col">
-      <input type="text" class="form-control" placeholder="Last name">
-    </div>
-  </div>
-          </div>
-          <div class="form-group">
-            <label for="exampleFormControlTextarea1">Example textarea</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-          </div>
-                </form>
-          <button type="submit" class="btn btn-primary">Submit</button>
-          </form>
-        <form>
-            <input type="text" placeholder="Прізвище і ім'я">
-            <br>
-            <input type="text" placeholder="Номер">
-            <br>
-            <textarea placeholder="Коментар"></textarea>
-            <br>
-            <input type="submit" value="Надіслати">
-        </form>
-        <img src="img/communication.jpg" alt="дівчина яка тримає бланк і ручку">
-        <p>Або ж за номером вказаний вище</p>
-    </div>
+  </div>
 </footer>
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<script src="js/index.js"></script>
 </body>
 </html>
